Fix double scrollbar on messages

--- a/app/assets/stylesheets/messages/messages_index.scss
+++ b/app/assets/stylesheets/messages/messages_index.scss
@@ -79,6 +79,10 @@
   overflow-y: auto;
 }
 
+.messages-show-message-list::-webkit-scrollbar {
+  display: none;
+}
+
 .messages-show-form {
   display: flex;
   justify-content: center;
